// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollableSection should render its default content 1`] = `
<div
  style={
    Object {
      "flex": "1 1 auto",
    }
  }
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  />
</div>
`;

exports[`ScrollableSection should render the given columns 1`] = `
<div
  style={
    Object {
      "flex": "1 1 auto",
    }
  }
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <ScrollSyncColumn
      className=""
      key="a"
      name="a"
      width="150px"
    >
      Column A
    </ScrollSyncColumn>
    <ScrollSyncColumn
      className=""
      key="b"
      name="b"
      width="150px"
    >
      Column B
    </ScrollSyncColumn>
  </Scrollbars>
</div>
`;
